Allow for both gcp-integration and test-with-latest terraform to run at same time
[#141154277]

Signed-off-by: Angela Chin <achin@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -154,6 +154,7 @@ jobs:
       GCP_PROJECT_ID: {{gcp_project_id}}
       GCP_REGION: {{gcp_region}}
       GCP_ZONE: {{gcp_zone}}
+      GCP_ENV_PREFIX: gcp-integration-
     on_failure:
       put: bbl-integration-s3
       params:
@@ -330,6 +331,7 @@ jobs:
       GCP_PROJECT_ID: {{gcp_project_id}}
       GCP_REGION: {{gcp_region}}
       GCP_ZONE: {{gcp_zone}}
+      GCP_ENV_PREFIX: latest-terraform-
     on_failure:
       put: bbl-integration-s3
       params:
