--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -10,16 +10,16 @@ groups:
   - bbl-downstream-docker-image
   - bbl-downstream-setup-env
   - bbl-downstream-destroy-env
+- name: smoke-tests
+  jobs:
+  - test-with-latest-terraform
+  - test-with-latest-bosh-cli
 - name: final-release
   jobs:
   - major
   - minor
   - patch
   - github-release
-- name: smoke-tests
-  jobs:
-  - test-with-latest-terraform
-  - test-with-latest-bosh-cli
 
 resources:
 - name: bosh-bootloader-develop
@@ -137,6 +137,7 @@ jobs:
       AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
       AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
       AWS_REGION: {{aws_region}}
+      BBL_TEST_ENV_ID_PREFIX: bbl-ci
     on_failure:
       put: bbl-integration-s3
       params:
@@ -160,7 +161,7 @@ jobs:
       GCP_PROJECT_ID: {{gcp_project_id}}
       GCP_REGION: {{gcp_region}}
       GCP_ZONE: {{gcp_zone}}
-      GCP_ENV_PREFIX: gcp-integration-
+      BBL_TEST_ENV_ID_PREFIX: bbl-ci
     on_failure:
       put: bbl-integration-s3
       params:
@@ -187,6 +188,58 @@ jobs:
       GCP_PROJECT_ID: {{gcp_project_id}}
       GCP_REGION: {{gcp_region}}
       GCP_ZONE: {{gcp_zone}}
+      BBL_TEST_ENV_ID_PREFIX: bbl-ci
+    on_failure:
+      put: bbl-integration-s3
+      params:
+        file: bbl-integration-s3/*.tgz
+
+# Smoke-tests
+- name: test-with-latest-terraform
+  serial: true
+  public: true
+  plan:
+  - aggregate:
+    - get: bosh-bootloader
+      resource: bosh-bootloader-develop
+      passed: [test-bosh-bootloader]
+    - get: ci
+      resource: infrastructure-ci
+    - get: terraform
+      trigger: true
+  - task: test
+    file: ci/scripts/bosh-bootloader/test-with-latest-terraform/task.yml
+    params:
+      GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
+      GCP_PROJECT_ID: {{gcp_project_id}}
+      GCP_REGION: {{gcp_region}}
+      GCP_ZONE: {{gcp_zone}}
+      BBL_TEST_ENV_ID_PREFIX: bbl-ci-terraform
+    on_failure:
+      put: bbl-integration-s3
+      params:
+        file: bbl-integration-s3/*.tgz
+
+- name: test-with-latest-bosh-cli
+  serial: true
+  public: true
+  plan:
+  - aggregate:
+    - get: bosh-bootloader
+      resource: bosh-bootloader-develop
+      passed: [test-bosh-bootloader]
+    - get: ci
+      resource: infrastructure-ci
+    - get: bosh-cli
+      trigger: true
+  - task: test
+    file: ci/scripts/bosh-bootloader/test-with-latest-bosh-cli/task.yml
+    params:
+      GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
+      GCP_PROJECT_ID: {{gcp_project_id}}
+      GCP_REGION: {{gcp_region}}
+      GCP_ZONE: {{gcp_zone}}
+      BBL_TEST_ENV_ID_PREFIX: bbl-ci-bosh-cli
     on_failure:
       put: bbl-integration-s3
       params:
@@ -315,54 +368,3 @@ jobs:
       commitish: builds/commitish
       globs:
       - builds/bin/bbl-*
-
-# Smoke-tests
-- name: test-with-latest-terraform
-  serial: true
-  public: true
-  plan:
-  - aggregate:
-    - get: bosh-bootloader
-      resource: bosh-bootloader-develop
-      passed: [test-bosh-bootloader]
-    - get: ci
-      resource: infrastructure-ci
-    - get: terraform
-      trigger: true
-  - task: test
-    file: ci/scripts/bosh-bootloader/test-with-latest-terraform/task.yml
-    params:
-      GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
-      GCP_PROJECT_ID: {{gcp_project_id}}
-      GCP_REGION: {{gcp_region}}
-      GCP_ZONE: {{gcp_zone}}
-      GCP_ENV_PREFIX: latest-terraform-
-    on_failure:
-      put: bbl-integration-s3
-      params:
-        file: bbl-integration-s3/*.tgz
-
-- name: test-with-latest-bosh-cli
-  serial: true
-  public: true
-  plan:
-  - aggregate:
-    - get: bosh-bootloader
-      resource: bosh-bootloader-develop
-      passed: [test-bosh-bootloader]
-    - get: ci
-      resource: infrastructure-ci
-    - get: bosh-cli
-      trigger: true
-  - task: test
-    file: ci/scripts/bosh-bootloader/test-with-latest-bosh-cli/task.yml
-    params:
-      GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
-      GCP_PROJECT_ID: {{gcp_project_id}}
-      GCP_REGION: {{gcp_region}}
-      GCP_ZONE: {{gcp_zone}}
-      GCP_ENV_PREFIX: latest-bosh-cli-
-    on_failure:
-      put: bbl-integration-s3
-      params:
-        file: bbl-integration-s3/*.tgz
