--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -20,6 +20,10 @@ groups:
   jobs:
   - delete-consats-linux-deployments
   - delete-consats-windows-deployments
+- name: infrastructure
+  jobs:
+  - setup-consats-linux-infrastructure
+  - teardown-consats-linux-infrastructure
 
 resources:
 - name: infrastructure-ci
@@ -55,6 +59,13 @@ resources:
     branch: master
     private_key: {{consul-cf-env-private-key}}
     uri: git@github.com:cloudfoundry/consul-cf-env.git
+
+- name: infrastructure-ci-bbl-states
+  type: git
+  source:
+    branch: master
+    private_key: {{cf_infra_bot_user_github_private_key}}
+    uri: git@github.com:cloudfoundry/infrastructure-ci-bbl-states.git
 
 - name: aws-stemcell
   type: bosh-io-stemcell
@@ -522,3 +533,50 @@ jobs:
       BOSH_CLIENT_SECRET: {{consats_windows_bosh_password}}
       BOSH_CA_CERT: {{consats_windows_bosh_director_ca_cert}}
       DEPLOYMENTS_WITH_WORD: consul
+
+# Infrastructure
+
+- name: setup-consats-linux-infrastructure
+  public: true
+  serial: true
+  serial_groups: [consats-linux]
+  plan:
+  - aggregate:
+    - get: ci
+      resource: infrastructure-ci
+    - get: bbl-states-repo
+      resource: infrastructure-ci-bbl-states
+  - task: bbl-up
+    file: ci/scripts/infrastructure/bbl-up/task.yml
+    params:
+      BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
+      BBL_GCP_PROJECT_ID: {{gcp_project_id}}
+      BBL_GCP_REGION: {{gcp_region}}
+      BBL_GCP_ZONE: {{gcp_zone}}
+      BBL_STATE_DIR: consats-linux
+      BBL_NAME: consats-linux
+    ensure:
+      put: infrastructure-ci-bbl-states
+      params:
+        repository: bbl-states-repo-out
+        rebase: true
+
+- name: teardown-consats-linux-infrastructure
+  public: true
+  serial: true
+  serial_groups: [consats-linux]
+  plan:
+  - aggregate:
+    - get: ci
+      resource: infrastructure-ci
+    - get: bbl-states-repo
+      resource: infrastructure-ci-bbl-states
+  - task: bbl-destroy
+    file: ci/scripts/infrastructure/bbl-destroy/task.yml
+    params:
+      BBL_STATE_DIR: consats-linux
+    ensure:
+      put: infrastructure-ci-bbl-states
+      params:
+        repository: bbl-states-repo-out
+        rebase: true
