--- a/pipelines/infrastructure-ci.yml
+++ b/pipelines/infrastructure-ci.yml
@@ -3,12 +3,22 @@ groups:
 - name: infrastructure-ci
   jobs:
   - infrastructure-ci-unit-tests
+- name: windows-worker
+  jobs:
+  - setup-worker-infrastructure
+  - teardown-worker-infrastructure
 
 resources:
 - name: infrastructure-ci
   type: git
   source:
     uri: https://github.com/cloudfoundry/infrastructure-ci
+    branch: master
+- name: infrastructure-ci-bbl-states
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry/infrastructure-ci-bbl-states.git
+    private_key: {{cf_infra_bot_user_github_private_key}}
     branch: master
 
 jobs:
@@ -20,3 +30,50 @@ jobs:
       trigger: true
     - task: infrastructure-ci-tests
       file: infrastructure-ci/scripts/infrastructure-ci/task.yml
+
+# Infrastructure
+
+- name: setup-worker-infrastructure
+  public: true
+  serial: true
+  serial_groups: [infrastructure]
+  plan:
+  - aggregate:
+    - get: ci
+      resource: infrastructure-ci
+    - get: bbl-states-repo
+      resource: infrastructure-ci-bbl-states
+  - task: bbl-up
+    file: ci/scripts/infrastructure/bbl-up/task.yml
+    params:
+      BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
+      BBL_GCP_PROJECT_ID: {{gcp_project_id}}
+      BBL_GCP_REGION: {{gcp_region}}
+      BBL_GCP_ZONE: {{gcp_zone}}
+      BBL_STATE_DIR: ci-workers
+      BBL_NAME: ci-workers
+    ensure:
+      put: infrastructure-ci-bbl-states
+      params:
+        repository: bbl-states-repo-out
+        rebase: true
+
+- name: teardown-worker-infrastructure
+  public: true
+  serial: true
+  serial_groups: [infrastructure]
+  plan:
+  - aggregate:
+    - get: ci
+      resource: infrastructure-ci
+    - get: bbl-states-repo
+      resource: infrastructure-ci-bbl-states
+  - task: bbl-destroy
+    file: ci/scripts/infrastructure/bbl-destroy/task.yml
+    params:
+      BBL_STATE_DIR: ci-workers
+    ensure:
+      put: infrastructure-ci-bbl-states
+      params:
+        repository: bbl-states-repo-out
+        rebase: true
