--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -164,11 +164,12 @@ jobs:
     - get: windows-stemcell
     - get: turbulence-release
     - get: latest-consul-release
-    - get: infrastructure-ci-bbl-states
+    - get: bbl-states-repo
+      resource: infrastructure-ci-bbl-states
   - task: consats-linux
     file: ci/scripts/run-consats/task.yml
     params:
-      BBL_STATE_DIR: infrastructure-ci-bbl-states/consats-linux
+      BBL_STATE_DIR: consats-linux
       PARALLEL_NODES: 7
       ENABLE_TURBULENCE_TESTS: false
 
@@ -189,11 +190,12 @@ jobs:
     - get: windows-stemcell
     - get: turbulence-release
     - get: latest-consul-release
-    - get: infrastructure-ci-bbl-states
+    - get: bbl-states-repo
+      resource: infrastructure-ci-bbl-states
   - task: consats-linux
     file: ci/scripts/run-consats/task.yml
     params:
-      BBL_STATE_DIR: infrastructure-ci-bbl-states/consats-linux
+      BBL_STATE_DIR: consats-linux
       PARALLEL_NODES: 1
       ENABLE_TURBULENCE_TESTS: true
 
@@ -214,11 +216,12 @@ jobs:
     - get: windows-stemcell
     - get: turbulence-release
     - get: latest-consul-release
-    - get: infrastructure-ci-bbl-states
+    - get: bbl-states-repo
+      resource: infrastructure-ci-bbl-states
   - task: consats-windows
     file: ci/scripts/run-consats/task.yml
     params:
-      BBL_STATE_DIR: infrastructure-ci-bbl-states/consats-windows
+      BBL_STATE_DIR: consats-windows
       PARALLEL_NODES: 5
       ENABLE_TURBULENCE_TESTS: false
       WINDOWS_CLIENTS: true
@@ -240,11 +243,12 @@ jobs:
     - get: windows-stemcell
     - get: turbulence-release
     - get: latest-consul-release
-    - get: infrastructure-ci-bbl-states
+    - get: bbl-states-repo
+      resource: infrastructure-ci-bbl-states
   - task: consats-windows
     file: ci/scripts/run-consats/task.yml
     params:
-      BBL_STATE_DIR: infrastructure-ci-bbl-states/consats-windows
+      BBL_STATE_DIR: consats-windows
       PARALLEL_NODES: 1
       ENABLE_TURBULENCE_TESTS: true
       WINDOWS_CLIENTS: true
