Add setup windows infra jobs to pipeline
[#134708781]

Signed-off-by: Rizwan Reza <rreza@pivotal.io>

--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -24,6 +24,8 @@ groups:
   jobs:
   - setup-consats-linux-infrastructure
   - teardown-consats-linux-infrastructure
+  - setup-consats-windows-infrastructure
+  - teardown-consats-windows-infrastructure
 
 resources:
 - name: infrastructure-ci
